# libnd4j

./: .gitignore  AddingNewOps.md  CMakeLists.txt  Jenkinsfile  README.md  UnderstandingGraph.md  buildnativeoperations.sh  flatproto.txt  main.cpp  windows.md
blas/: CMakeLists.txt  Environment.cpp  NDArray.h  NDArrayFactory.h  NativeOpExcutioner.h  NativeOps.h  Nd4j.h
blas/cpu/: GraphExecutioner.cpp  NDArray.cpp  NDArray.macro  NDArrayFactory.cpp  NativeOpExcutioner.cpp  NativeOps.cpp  Nd4j.cpp
blas/cuda/: NativeOps.cu  Nd4j.cu
cmake/: FindNVML.cmake  ios-dev32.cmake  ios-dev64.cmake  ios-sim32.cmake  ios-sim64.cmake
include/: Status.h  broadcasting.h  convolution.h  indexreduce.h  op_boilerplate.h  pairwise_transform.h  reduce.h  reduce3.h  scalar.h  shape.h  summarystatsreduce.h  templatemath.h  transform.h
include/array/: ArrayLocation.h  DataType.h  DataTypeConversions.h  DataTypeUtils.h  InputType.h  LaunchContext.h  NDArrayList.h  ObjectFactory.h  Placeholder.h  PointerFactory.h  ResultSet.h  ShapeList.h
include/cnpy/: cnpy.cpp  cnpy.h
include/graph/: ArgumentsList.h  Block.h  Context.h  ContextPrototype.h  FlatUtils.h  FlowPath.h  FrameState.h  Graph.h  GraphHolder.h  GraphState.h  Intervals.h  Node.h  NodeState.h  Scope.h  SessionLocalStorage.h  Stash.h  Variable.h  VariableProxy.h  VariableSpace.h
include/helpers/: BitwiseUtils.h  BlasHelper.h  CudaLaunchHelper.h  DebugHelper.h  EnumUtils.h  OpTracker.h  RandomLauncher.h  ShapeUtils.h  StringUtils.h  TAD.h  helper_generator.h  logger.h  mman.h  shape.h
include/indexing/: IndicesList.h  NDIndex.h
include/loops/: broadcasting.h  grid.h  grid_shaped.h  grid_strided.h  indexreduce.h  legacy_ops.h  pairwise_transform.h  random.h  reduce.h  reduce3.h  scalar.h  summarystatsreduce.h  transform.h
include/memory/: ExternalWorkspace.h  MemoryReport.h  Workspace.h
include/ops/: meta_ops.h  ops.h  special_ops.h  specials.h
minifier/: minifier.cpp
tests/: ShapeTests.cpp  TadTest.cpp
(+501 files in other folders)
